nf18: Add Zephyr port and move Arduino implementation into a new directory.

--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,6 @@
 [submodule "31-temperature-and-smoke-detector/firmware/note-c"]
 	path = 31-temperature-and-smoke-detector/firmware/note-c
 	url = https://github.com/blues/note-c
+[submodule "18-temperature-and-humidity-monitor/firmware/zephyr/src/note-c"]
+	path = 18-temperature-and-humidity-monitor/firmware/zephyr/src/note-c
+	url = https://github.com/blues/note-c
